--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
                 represent an actual company or service</p>            
         </article>
     </footer>
+    <script src="scripts/burger-nav.js"></script>
 </body>
 
 </html>
