--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 
             <!-- second article -->
             <article class="place-article">
-                <img src="images/home/kingdom-of-lights.jpg" alt="Magome" class="popular-place-img">
+                <img src="images/home/kingdom-of-lights.jpg" alt="Magome" class="popular-place-img order-change">
                 <div class="place-content">
-                    <h3 class="content-para">Kingdom of Lights</h3>
-                    <p class="content-para">Sitting just across from Omura Bay, Huis Ten Bosch in Nagasaki is one of
+                    <h3 class="content-para order-change">Kingdom of Lights</h3>
+                    <p class="content-para order-change">Sitting just across from Omura Bay, Huis Ten Bosch in Nagasaki is one of
                         Japan's largest theme parks and is arguably the most beautiful. The Huis Ten Bosch's Kingdom of
                         Lights presents an otherworldly scene of many colors. Millions of light bulbs turn the night
                         into a wonderland, the likes of which you've never seen before.</p>
