--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -33,6 +34,12 @@
                 <li class="nav-item"><a href="#" class="nav-link">News</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
             </ul>
+
+            <section class="burger-nav">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </section>
         </nav>
 
         <!-- header content -->
@@ -65,11 +72,11 @@
             </article>
 
             <!-- second article -->
-            <article class="place-article">
-                <img src="images/home/kingdom-of-lights.jpg" alt="Magome" class="popular-place-img order-change">
+            <article class="place-article order-change">
+                <img src="images/home/kingdom-of-lights.jpg" alt="Magome" class="popular-place-img">
                 <div class="place-content">
-                    <h3 class="content-para order-change">Kingdom of Lights</h3>
-                    <p class="content-para order-change">Sitting just across from Omura Bay, Huis Ten Bosch in Nagasaki is one of
+                    <h3 class="content-para">Kingdom of Lights</h3>
+                    <p class="content-para">Sitting just across from Omura Bay, Huis Ten Bosch in Nagasaki is one of
                         Japan's largest theme parks and is arguably the most beautiful. The Huis Ten Bosch's Kingdom of
                         Lights presents an otherworldly scene of many colors. Millions of light bulbs turn the night
                         into a wonderland, the likes of which you've never seen before.</p>
@@ -131,10 +138,12 @@
 
         <article class="copyright">
             <!--  -->
-            <p>This website was created by <a href="https://github.com/00009987/WT-CW1" target="_blank">00009987</a> to fulfill Web Technology module’s requirements and does not
-                represent an actual company or service</p>            
+            <p>This website was created by <a href="https://github.com/00009987/WT-CW1" target="_blank">00009987</a> to
+                fulfill Web Technology module’s requirements and does not
+                represent an actual company or service</p>
         </article>
     </footer>
+
     <script src="scripts/burger-nav.js"></script>
 </body>
 
