--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,9 @@
     <nav class="nav">
         <a class="brand-name" href="index.html">Voyager</a>
         <ul class="nav-items">
-            <li class="nav-item"><a href="#" class="nav-link">Explore</a></li>
+            <li class="nav-item"><a href="explore.html" class="nav-link">Explore</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Things to do</a></li>
-            <li class="nav-item"><a href="#" class="nav-link nav-l">Plan Your Trip</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Plan Your Trip</a></li>
             <li class="nav-item"><a href="#" class="nav-link">News</a></li>
             <li class="nav-item"><a href="#" class="nav-link active">Contact</a></li>
         </ul>
