--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Voyager</title>
     <link rel="stylesheet" href="styles/navigation.css">
     <link rel="stylesheet" href="styles/main.css">
     <!-- FONTS -->
@@ -30,7 +30,7 @@
             <ul class="nav-items">
                 <li class="nav-item"><a href="explore.html" class="nav-link">Explore</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Things to do</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Plan Your Trip</a></li>
+                <li class="nav-item"><a href="#" class="nav-link nav-l">Plan Your Trip</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">News</a></li>
                 <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
