--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
         <ul class="nav-items">
             <li class="nav-item"><a href="explore.html" class="nav-link">Explore</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Things to do</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Plan Your Trip</a></li>
+            <li class="nav-item"><a href="plan-your-trip.html" class="nav-link">Plan Your Trip</a></li>
             <li class="nav-item"><a href="#" class="nav-link">News</a></li>
             <li class="nav-item"><a href="#" class="nav-link active">Contact</a></li>
         </ul>
