--- a/explore.html
+++ b/explore.html
@@ -30,7 +30,7 @@
             <ul class="nav-items">
                 <li class="nav-item"><a href="#" class="nav-link active">Explore</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Things to do</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Plan Your Trip</a></li>
+                <li class="nav-item"><a href="plan-your-trip.html" class="nav-link">Plan Your Trip</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">News</a></li>
                 <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
