--- a/plan-your-trip.html
+++ b/plan-your-trip.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merienda+One&display=swap" rel="stylesheet">
     <title>Plan Your Trip</title>
 </head>
+
 <body>
     <header class="header">
         <!-- header background image -->
@@ -44,8 +46,122 @@
         <section class="banner">
             <h1 class="banner-title">
                 What should you know before travelling to Japan?
-            </h1>            
+            </h1>
         </section>
     </header>
+
+    <main>
+        <!-- TIPS CONTENT -->
+        <section class="tips-content-container">
+            <!-- single article -->
+            <article class="tips-content">
+                <!-- tip title -->
+                <div class="tip-title">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <button class="tip-button" data-id="0">
+                        <span class="right-icon">
+                            <svg aria-hidden="true" focusable="false" data-prefix="fas"
+                                data-icon="chevron-right" class="svg-inline--fa fa-chevron-right fa-w-10" role="img"
+                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                                <path fill="currentColor"
+                                    d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z">
+                                </path>
+                            </svg>
+                        </span>
+                        <span class="down-icon off">
+                            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-down"
+                                class="svg-inline--fa fa-chevron-down fa-w-14" role="img"
+                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                                <path fill="currentColor"
+                                    d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z">
+                                </path>
+                            </svg>
+                        </span>
+                    </button>
+                </div>
+
+                <!-- tip text -->
+                <div class="tip-text" data-id="0">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati magnam adipisci impedit
+                        corrupti possimus, sunt expedita et quae modi nostrum, nesciunt, veniam consequatur sit culpa.
+                    </p>
+                </div>
+            </article>
+
+            <!-- single article -->
+            <article class="tips-content">
+                <!-- tip title -->
+                <div class="tip-title">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <button class="tip-button" data-id="1">
+                        <span class="right-icon">
+                            <svg aria-hidden="true" focusable="false" data-prefix="fas"
+                                data-icon="chevron-right" class="svg-inline--fa fa-chevron-right fa-w-10" role="img"
+                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                                <path fill="currentColor"
+                                    d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z">
+                                </path>
+                            </svg>
+                        </span>
+                        <span class="down-icon off">
+                            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-down"
+                                class="svg-inline--fa fa-chevron-down fa-w-14" role="img"
+                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                                <path fill="currentColor"
+                                    d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z">
+                                </path>
+                            </svg>
+                        </span>
+                    </button>
+                </div>
+
+                <!-- tip text -->
+                <div class="tip-text" data-id="1">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati magnam adipisci impedit
+                        corrupti possimus, sunt expedita et quae modi nostrum, nesciunt, veniam consequatur sit culpa.
+                    </p>
+                </div>
+            </article>
+
+            <!-- single article -->
+            <article class="tips-content">
+                <!-- tip title -->
+                <div class="tip-title">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <button class="tip-button" data-id="2">
+                        <span class="right-icon">
+                            <svg aria-hidden="true" focusable="false" data-prefix="fas"
+                                data-icon="chevron-right" class="svg-inline--fa fa-chevron-right fa-w-10" role="img"
+                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                                <path fill="currentColor"
+                                    d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z">
+                                </path>
+                            </svg>
+                        </span>
+                        <span class="down-icon off">
+                            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-down"
+                                class="svg-inline--fa fa-chevron-down fa-w-14" role="img"
+                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                                <path fill="currentColor"
+                                    d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z">
+                                </path>
+                            </svg>
+                        </span>
+                    </button>
+                </div>
+
+                <!-- tip text -->
+                <div class="tip-text" data-id="2">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati magnam adipisci impedit
+                        corrupti possimus, sunt expedita et quae modi nostrum, nesciunt, veniam consequatur sit culpa.
+                    </p>
+                </div>
+            </article>
+        </section>
+    </main>
+
+    <script src="scripts/burger-nav.js"></script>
+    <script src="scripts/plan-your-trip.js"></script>
 </body>
+
 </html>
