final changes made on the page

--- a/plan-your-trip.html
+++ b/plan-your-trip.html
@@ -57,11 +57,11 @@
             <article class="tips-content">
                 <!-- tip title -->
                 <div class="tip-title">
-                    <p>Lorem ipsum dolor sit amet.</p>
+                    <p>Timezone</p>
                     <button class="tip-button" data-id="0">
                         <span class="right-icon">
-                            <svg aria-hidden="true" focusable="false" data-prefix="fas"
-                                data-icon="chevron-right" class="svg-inline--fa fa-chevron-right fa-w-10" role="img"
+                            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-right"
+                                class="svg-inline--fa fa-chevron-right fa-w-10" role="img"
                                 xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
                                 <path fill="currentColor"
                                     d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z">
@@ -82,8 +82,8 @@
 
                 <!-- tip text -->
                 <div class="tip-text" data-id="0">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati magnam adipisci impedit
-                        corrupti possimus, sunt expedita et quae modi nostrum, nesciunt, veniam consequatur sit culpa.
+                    <p>All of Japan sits within the same time zone, and no daylight saving is practiced. The country is
+                        nine hours ahead of GMT.
                     </p>
                 </div>
             </article>
@@ -92,11 +92,11 @@
             <article class="tips-content">
                 <!-- tip title -->
                 <div class="tip-title">
-                    <p>Lorem ipsum dolor sit amet.</p>
+                    <p>Currency</p>
                     <button class="tip-button" data-id="1">
                         <span class="right-icon">
-                            <svg aria-hidden="true" focusable="false" data-prefix="fas"
-                                data-icon="chevron-right" class="svg-inline--fa fa-chevron-right fa-w-10" role="img"
+                            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-right"
+                                class="svg-inline--fa fa-chevron-right fa-w-10" role="img"
                                 xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
                                 <path fill="currentColor"
                                     d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z">
@@ -117,8 +117,8 @@
 
                 <!-- tip text -->
                 <div class="tip-text" data-id="1">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati magnam adipisci impedit
-                        corrupti possimus, sunt expedita et quae modi nostrum, nesciunt, veniam consequatur sit culpa.
+                    <p>The Japanese yen is used throughout the country and you can exchange foreign currency at the
+                        airports and most major banks.
                     </p>
                 </div>
             </article>
@@ -127,11 +127,11 @@
             <article class="tips-content">
                 <!-- tip title -->
                 <div class="tip-title">
-                    <p>Lorem ipsum dolor sit amet.</p>
+                    <p>Language</p>
                     <button class="tip-button" data-id="2">
                         <span class="right-icon">
-                            <svg aria-hidden="true" focusable="false" data-prefix="fas"
-                                data-icon="chevron-right" class="svg-inline--fa fa-chevron-right fa-w-10" role="img"
+                            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-right"
+                                class="svg-inline--fa fa-chevron-right fa-w-10" role="img"
                                 xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
                                 <path fill="currentColor"
                                     d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z">
@@ -152,8 +152,184 @@
 
                 <!-- tip text -->
                 <div class="tip-text" data-id="2">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati magnam adipisci impedit
-                        corrupti possimus, sunt expedita et quae modi nostrum, nesciunt, veniam consequatur sit culpa.
+                    <p>Japan's official language is Japanese, but English is generally understood in major cities and
+                        designated tourist sites.
+                    </p>
+                </div>
+            </article>
+
+            <!-- single article -->
+            <article class="tips-content">
+                <!-- tip title -->
+                <div class="tip-title">
+                    <p>Visa Information</p>
+                    <button class="tip-button" data-id="3">
+                        <span class="right-icon">
+                            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-right"
+                                class="svg-inline--fa fa-chevron-right fa-w-10" role="img"
+                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                                <path fill="currentColor"
+                                    d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z">
+                                </path>
+                            </svg>
+                        </span>
+                        <span class="down-icon off">
+                            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-down"
+                                class="svg-inline--fa fa-chevron-down fa-w-14" role="img"
+                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                                <path fill="currentColor"
+                                    d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z">
+                                </path>
+                            </svg>
+                        </span>
+                    </button>
+                </div>
+
+                <!-- tip text -->
+                <div class="tip-text" data-id="3">
+                    <p>Travelers from 68 countries across the globe can visit Japan for up to 90 days without requiring
+                        a visa.
+                    </p>
+                </div>
+            </article>
+
+            <!-- single article -->
+            <article class="tips-content">
+                <!-- tip title -->
+                <div class="tip-title">
+                    <p>International Tourist Tax</p>
+                    <button class="tip-button" data-id="4">
+                        <span class="right-icon">
+                            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-right"
+                                class="svg-inline--fa fa-chevron-right fa-w-10" role="img"
+                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                                <path fill="currentColor"
+                                    d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z">
+                                </path>
+                            </svg>
+                        </span>
+                        <span class="down-icon off">
+                            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-down"
+                                class="svg-inline--fa fa-chevron-down fa-w-14" role="img"
+                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                                <path fill="currentColor"
+                                    d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z">
+                                </path>
+                            </svg>
+                        </span>
+                    </button>
+                </div>
+
+                <!-- tip text -->
+                <div class="tip-text" data-id="4">
+                    <p>Visitors to Japan pay a 1,000 yen departure tax to expand and enhance the country’s tourist
+                        infrastructure—a small tax that will make a significant difference.
+                    </p>
+                </div>
+            </article>
+
+            <!-- single article -->
+            <article class="tips-content">
+                <!-- tip title -->
+                <div class="tip-title">
+                    <p>Staying Safe in Japan</p>
+                    <button class="tip-button" data-id="5">
+                        <span class="right-icon">
+                            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-right"
+                                class="svg-inline--fa fa-chevron-right fa-w-10" role="img"
+                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                                <path fill="currentColor"
+                                    d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z">
+                                </path>
+                            </svg>
+                        </span>
+                        <span class="down-icon off">
+                            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-down"
+                                class="svg-inline--fa fa-chevron-down fa-w-14" role="img"
+                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                                <path fill="currentColor"
+                                    d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z">
+                                </path>
+                            </svg>
+                        </span>
+                    </button>
+                </div>
+
+                <!-- tip text -->
+                <div class="tip-text" data-id="5">
+                    <p>If you do find yourself in a situation that requires serious help, dial 110 for an urgent call to
+                        the police and 119 for fire or ambulance.
+                    </p>
+                </div>
+            </article>
+
+            <!-- single article -->
+            <article class="tips-content">
+                <!-- tip title -->
+                <div class="tip-title">
+                    <p>Travelling With a Disability</p>
+                    <button class="tip-button" data-id="6">
+                        <span class="right-icon">
+                            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-right"
+                                class="svg-inline--fa fa-chevron-right fa-w-10" role="img"
+                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                                <path fill="currentColor"
+                                    d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z">
+                                </path>
+                            </svg>
+                        </span>
+                        <span class="down-icon off">
+                            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-down"
+                                class="svg-inline--fa fa-chevron-down fa-w-14" role="img"
+                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                                <path fill="currentColor"
+                                    d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z">
+                                </path>
+                            </svg>
+                        </span>
+                    </button>
+                </div>
+
+                <!-- tip text -->
+                <div class="tip-text" data-id="6">
+                    <p>At major train stations, airports, and hotels, as well as in most newer shopping centers and
+                        theaters in the city, the disabled traveler or wheelchair user should have little trouble
+                        getting from place to place.
+                    </p>
+                </div>
+            </article>
+
+            <!-- single article -->
+            <article class="tips-content">
+                <!-- tip title -->
+                <div class="tip-title">
+                    <p>Tipping</p>
+                    <button class="tip-button" data-id="7">
+                        <span class="right-icon">
+                            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-right"
+                                class="svg-inline--fa fa-chevron-right fa-w-10" role="img"
+                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                                <path fill="currentColor"
+                                    d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z">
+                                </path>
+                            </svg>
+                        </span>
+                        <span class="down-icon off">
+                            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-down"
+                                class="svg-inline--fa fa-chevron-down fa-w-14" role="img"
+                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                                <path fill="currentColor"
+                                    d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z">
+                                </path>
+                            </svg>
+                        </span>
+                    </button>
+                </div>
+
+                <!-- tip text -->
+                <div class="tip-text" data-id="7">
+                    <p>Tipping is not practiced in Japan. In fact, it can cause discomfort and confusion if you do. A
+                        service charge is generally added on to the final bill in restaurants.
                     </p>
                 </div>
             </article>
