--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
     </section>
 
     <script src="scripts/contact.js"></script>
-    <script src="scripts/burger-nav.js"></script>
+    <script src="scripts/burger-nav-contact.js"></script>
 </body>
 
 </html>
