linked news page with others

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li class="nav-item"><a href="explore.html" class="nav-link">Explore</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Things to do</a></li>
                 <li class="nav-item"><a href="plan-your-trip.html" class="nav-link">Plan Your Trip</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">News</a></li>
+                <li class="nav-item"><a href="news.html" class="nav-link">News</a></li>
                 <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
 
@@ -48,7 +48,7 @@
                 Travel to Japan
             </h1>
             <p>Discover lovely and aesthetic country together with us</p>
-            <a href="#"><button class="explore-btn">Explore now</button></a>
+            <a href="explore.html"><button class="explore-btn">Explore now</button></a>
         </section>
     </header>
 
