--- a/plan-your-trip.html
+++ b/plan-your-trip.html
@@ -31,7 +31,7 @@
                 <li class="nav-item"><a href="explore.html" class="nav-link">Explore</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Things to do</a></li>
                 <li class="nav-item"><a href="#" class="nav-link  active">Plan Your Trip</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">News</a></li>
+                <li class="nav-item"><a href="news.html" class="nav-link">News</a></li>
                 <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
 
