add responsivenes to news page

--- a/news.html
+++ b/news.html
@@ -56,7 +56,7 @@
                 </section>
 
                 <section class="center-content-container">
-                    <h3>Seven great things to do in and around Nagoya</h3>
+                    <h3>Seven great things to do in Nagoya</h3>
                     <p class="author">November 26, 2020 by Matt Evans</p>
                     <p class="content">Japan's fourth largest city, Nagoya is a major industrial and cultural center,
                         conveniently located at the heart of Japan's largest island of Honshu.
