link every pages with each other

--- a/news.html
+++ b/news.html
@@ -25,7 +25,7 @@
             <a class="brand-name" href="index.html">Voyager</a>
             <ul class="nav-items">
                 <li class="nav-item"><a href="explore.html" class="nav-link">Explore</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Things to do</a></li>
+                <li class="nav-item"><a href="things-to-do.html" class="nav-link">Things to do</a></li>
                 <li class="nav-item"><a href="plan-your-trip.html" class="nav-link">Plan Your Trip</a></li>
                 <li class="nav-item"><a href="#" class="nav-link active">News</a></li>
                 <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
