--- a/things-to-do.html
+++ b/things-to-do.html
@@ -201,6 +201,7 @@
     </main>
 
     <script src="scripts/burger-nav.js"></script>
+    <script src="scripts/things-to-do.js"></script>
 </body>
 
 </html>
