--- a/news.html
+++ b/news.html
@@ -156,7 +156,7 @@
     </main>
 
 
-    <script src="scripts/burger-nav-contact.js"></script>
+    <script src="scripts/burger-nav.js"></script>
 </body>
 
 </html>
