add footer content

--- a/news.html
+++ b/news.html
@@ -155,6 +155,25 @@
         </aside>
     </main>
 
+     <!-- footer content -->
+     <footer>
+        <section class="social-media">
+            <div class="social-media-icons">
+                <a href="htttps://twitter.com"><img src="images/svg/twitter.svg" alt="Twitter" class="svg twitter"></a>
+                <a href="htttps://instagram.com"><img src="images/svg/instagram.svg" alt="Instagram"
+                        class="svg instagram"></a>
+                <a href="https://github.com/00009987/WT-CW1"><img src="images/svg/github.svg" alt="Github"
+                        class="svg github"></a>
+            </div>
+        </section>
+
+        <article class="copyright">
+            <!--  -->
+            <p>This website was created by <a href="https://github.com/00009987/WT-CW1" target="_blank">00009987</a> to
+                fulfill Web Technology module’s requirements and does not
+                represent an actual company or service</p>
+        </article>
+    </footer>
 
     <script src="scripts/burger-nav.js"></script>
 </body>
