--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="underline"></div>
 
             <!-- first article -->
-            <article class="place-article">
+            <article class="place-article magome">
                 <div class="place-content">
                     <h3>Magome (Nakasendo)</h3>
                     <p>No need to imagine 17th-century Japan — come to Magome-juku and see it. A bus from Nakatsugawa
@@ -72,7 +72,7 @@
             </article>
 
             <!-- second article -->
-            <article class="place-article order-change">
+            <article class="place-article order-change kingdom">
                 <img src="images/home/kingdom-of-lights.jpg" alt="Magome" class="popular-place-img">
                 <div class="place-content">
                     <h3 class="content-para">Kingdom of Lights</h3>
@@ -84,7 +84,7 @@
             </article>
 
             <!-- third article -->
-            <article class="place-article">
+            <article class="place-article shrine">
                 <div class="place-content">
                     <h3>Motonosumi-jinja Shrine</h3>
                     <p> A spiritual center that's a lot of fun to visit, Motonosumi-jinja Shrine is a must-see
@@ -140,7 +140,7 @@
         </article>
     </footer>
 
-    <script src="scripts/burger-nav.js"></script>    
+    <script src="script/app.js"></script>       
 </body>
 
 </html>
