--- a/things-to-do.html
+++ b/things-to-do.html
@@ -220,8 +220,7 @@
         </article>
     </footer>
     
-    <script src="scripts/burger-nav.js"></script>
-    <script src="scripts/things-to-do.js"></script>
+    <script src="script/app.js"></script>    
 </body>
 
 </html>
