--- a/contact.html
+++ b/contact.html
@@ -97,8 +97,7 @@
         </article>
     </section>
 
-    <script src="scripts/contact.js"></script>
-    <script src="scripts/burger-nav.js"></script>
+    <script src="script/app.js"></script>    
 </body>
 
 </html>
