--- a/explore.html
+++ b/explore.html
@@ -203,8 +203,7 @@
                 represent an actual company or service</p>
         </article>
     </footer>
-    <script src="scripts/burger-nav.js"></script>
-    <script src="scripts/explore.js"></script>
+    <script src="script/app.js"></script>    
 </body>
 
 </html>
