--- a/news.html
+++ b/news.html
@@ -175,7 +175,7 @@
         </article>
     </footer>
 
-    <script src="scripts/burger-nav.js"></script>
+    <script src="script/app.js"></script>    
 </body>
 
 </html>
