--- a/plan-your-trip.html
+++ b/plan-your-trip.html
@@ -356,8 +356,7 @@
         </article>
     </footer>
     
-    <script src="scripts/burger-nav.js"></script>
-    <script src="scripts/plan-your-trip.js"></script>
+    <script src="script/app.js"></script>    
 </body>
 
 </html>
