change functionality in footer

--- a/explore.html
+++ b/explore.html
@@ -185,7 +185,7 @@
     </main>
 
     <!-- footer content -->
-    <footer>
+    <footer class="footer-off"> 
         <section class="social-media">
             <div class="social-media-icons">
                 <a href="htttps://twitter.com"><img src="images/svg/twitter.svg" alt="Twitter" class="svg twitter"></a>
